# OctoPotatoEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c
Assets/shaders/: shader.frag  shader.vert
Assets/shaders/gltfscenerendering/: a.spv  b.spv  wireframe.frag
Framework/Common/: Allocator.cpp  Allocator.hpp  AssetLoader.cpp  AssetLoader.hpp  BaseApplication.cpp  BaseApplication.hpp  Buffer.hpp  CMakeLists.txt  Configuration.hpp  GraphicsManager.cpp  GraphicsManager.hpp  Image.hpp  MemoryManager.cpp  MemoryManager.hpp  SceneManager.cpp  SceneManager.hpp  SceneObject.hpp  global.hpp  gltfSceneParser.cpp  main.cpp
Framework/Interface/: IApplication.hpp  IRuntimeModule.hpp  Interface.hpp
Framework/Parser/: gltfSceneParser.hpp
Platform/: CMakeLists.txt  GLFWApplication.cpp  GLFWApplication.hpp
RHI/Vulkan/: CMakeLists.txt  VulkanGraphicsManager.cpp  VulkanGraphicsManager.hpp
RHI/Vulkan/base/: CMakeLists.txt  VulkanBuffer.cpp  VulkanDevice.cpp  VulkanExampleBase.h  VulkanSwapChain.hpp  VulkanTools.h  VulkanglTFModel.cpp  VulkanglTFModel.h  camera.hpp
Test/: CMakeLists.txt  TestApplication.cpp
