cmake_minimum_required(VERSION 3.1)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 11)
project(OctoPotatoEngine)
include_directories("D:/VulkanSDK/1.2.182.0/Include")
include_directories("C:/lib/glm")
include_directories("C:/lib/glfw-3.3.4.bin.WIN64/include")
include_directories("${PROJECT_SOURCE_DIR}/Framework/Common")
include_directories("${PROJECT_SOURCE_DIR}/Framework/Interface")
include_directories("${PROJECT_SOURCE_DIR}/Platform")
add_subdirectory(Framework)
add_subdirectory(Platform)
add_subdirectory(Test)