cmake_minimum_required(VERSION 3.7)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)
project(OctoPotatoEngine)
# add_definitions(/std:c++17)
# list(APPEND CMAKE_PREFIX_PATH C:/lib/glfw-3.3.4.bin.WIN64/lib-vc2019)
# list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/External/crossguid/cmake")
include_directories("D:/VulkanSDK/1.2.182.0/Include")
include_directories("C:/lib/glm")
include_directories("C:/lib/glfw-3.3.4.bin.WIN64/include")
include_directories("${PROJECT_SOURCE_DIR}/External")
include_directories("${PROJECT_SOURCE_DIR}/External/gli")
include_directories("${PROJECT_SOURCE_DIR}/External/include")
include_directories("${PROJECT_SOURCE_DIR}/Framework/Common")
include_directories("${PROJECT_SOURCE_DIR}/Framework/Interface")
include_directories("${PROJECT_SOURCE_DIR}/Framework/Parser")
include_directories("${PROJECT_SOURCE_DIR}/Platform")
include_directories("${PROJECT_SOURCE_DIR}/RHI/Vulkan/base")
include_directories("${PROJECT_SOURCE_DIR}/RHI/Vulkan")
add_subdirectory(Framework)
add_subdirectory(Platform)
add_subdirectory(RHI/Vulkan)
add_subdirectory(Test)