add_executable(Test TestApplication.cpp)
find_package(Vulkan)
IF (NOT Vulkan_FOUND)
		find_library(Vulkan_LIBRARY NAMES vulkan-1 vulkan PATHS D:/VulkanSDK/1.2.182.0/Lib)
		IF (Vulkan_LIBRARY)
			set(Vulkan_FOUND ON)
			MESSAGE("Using bundled Vulkan library version")
		ENDIF()
ENDIF()
IF (NOT Vulkan_FOUND)
	message(FATAL_ERROR "Could not find Vulkan library!")
ELSE()
	message(STATUS ${Vulkan_LIBRARY})
ENDIF()
find_library(glfw NAMES glfw3 PATHS C:/lib/glfw-3.3.4.bin.WIN64/lib-vc2019)
IF(NOT glfw)
	message(FATAL_ERROR "Could not find glfw library!")
ENDIF()
target_link_libraries(Test VkManager Application Common ${Vulkan_LIBRARY} ${glfw} gdi32)